@@ -1,3 +1,9 @@
+2008-03-08  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* mail-source.el (mail-source-delete-old-incoming-confirm): Change
+	default to nil.
+	(mail-source-delete-old-incoming): Make confirmation prompt more clear.
+
 2008-03-07  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* lpath.el: Rearrange.
